--- a/styles/partials/layout.module.scss
+++ b/styles/partials/layout.module.scss
@@ -193,7 +193,10 @@ body {
     }
 }
 
-@media (min-width: 768px) {
+// @media (min-width: 768px) {
+// }
+
+@media (min-width: 992px) {
     .slider {
         display: none;
     }
@@ -204,24 +207,26 @@ body {
             // background: linear-gradient($page-background 477px, #fff 100px);
             position: relative;
             .background-img {
-                min-width: 100vw;
+                width: 980px;
                 height: 478px;
                 position: absolute;
                 overflow: hidden;
-                img {
-                    min-width: 100vw;
-                }
+                margin-left: auto;
+                margin-right: auto;
+                left: 0;
+                right: 0;
             }
         }
 
         .card-grid {
             width: 100%;
-            max-width: 1200px;
+            max-width: 900px;
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 30px;
             margin-left: auto !important;
             margin-right: auto !important;
+            justify-content: center;
             .video-card {
                 position: relative;
                 grid-row: 1;
