--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,8 +1,7 @@
-@import "./partials/base.module.scss";
-@import "./partials/typography.module.scss";
-@import "./partials/navbar.module.scss";
-@import "./partials/footer.module.scss";
-@import "./partials/layout.module.scss";
-@import "./partials/modal.module.scss";
-@import "./partials/button.module.scss";
+@import './partials/base.module.scss';
+@import './partials/typography.module.scss';
+@import './partials/navbar.module.scss';
+@import './partials/layout.module.scss';
+@import './partials/modal.module.scss';
+@import './partials/button.module.scss';
 /*the project is designed mobile first */
