--- a/styles/partials/modal.module.scss
+++ b/styles/partials/modal.module.scss
@@ -1,7 +1,8 @@
 .questionModal {
     position: absolute;
-    top: 170px;
+    top: -150px;
     right: 0;
+    left: 0;
     background-color: white;
     color: #000;
     padding: 15px;
@@ -43,8 +44,36 @@
     }
 }
 
-@media (min-width: 768px) {
-    .questionModal {
-        top: 150px;
+.openModal {
+    position: absolute;
+    display: flex;
+    background-color: $page-background;
+    left: auto;
+    height: auto;
+    min-height: 180px;
+    max-height: 200px;
+    margin-left: 5px;
+    margin-right: 5px;
+    width: 95%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    color: $primary;
+    cursor: pointer;
+    border-radius: 15px;
+    box-shadow: 1px 1px 5px rgba($textPar, 0.5);
+    bottom: -15px;
+    padding: 10px 20px;
+
+    .text {
+        text-align: center;
+        line-height: 1.1;
+    }
+}
+
+@media (min-width: 992px) {
+    .openModal {
+        padding: 5px;
     }
 }
