--- a/styles/partials/typography.module.scss
+++ b/styles/partials/typography.module.scss
@@ -1,10 +1,12 @@
-@import url("https://use.typekit.net/dcw3wug.css");
+@import url('https://use.typekit.net/dcw3wug.css');
 
-body{
-  font-family: degular, sans-serif;
+body {
+    font-family: 'degular', sans-serif;
 }
 
-h1, h2, h3{
-  font-weight: 700;
-  color: $primary;
+h1,
+h2,
+h3 {
+    font-weight: 700;
+    color: $primary;
 }
