--- a/styles/partials/modal.module.scss
+++ b/styles/partials/modal.module.scss
@@ -26,6 +26,7 @@
         }
     }
     .question-wrapper {
+        background-color: red;
         padding-top: 2px;
         padding-bottom: 2px;
         .question {
