changin typography for safari

--- a/styles/partials/typography.module.scss
+++ b/styles/partials/typography.module.scss
@@ -1,7 +1,7 @@
 @import url('https://use.typekit.net/dcw3wug.css');
 
 body {
-    font-family: 'degular', sans-serif;
+    font-family: 'degular', sans-serif !important;
 }
 
 h1,
