--- a/styles/partials/typography.module.scss
+++ b/styles/partials/typography.module.scss
@@ -2,6 +2,8 @@
 
 body {
     font-family: 'degular', sans-serif !important;
+    --bs-font-sans-serif: 'degular', sans-serif !important;
+    --bs-body-font-family: 'degular', sans-serif !important;
 }
 
 h1,
