--- a/styles/partials/typography.module.scss
+++ b/styles/partials/typography.module.scss
@@ -1,7 +1,13 @@
 @import url('https://use.typekit.net/dcw3wug.css');
 
+@font-face {
+    font-family: 'degular';
+    font-style: normal;
+    src: url('https://use.typekit.net/dcw3wug.css') format('ttf');
+}
+
 body {
-    font-family: 'degular', sans-serif !important;
+    font-family: 'degular', sans-serif;
     --bs-font-sans-serif: 'degular', sans-serif !important;
     --bs-body-font-family: 'degular', sans-serif !important;
 }
