--- a/styles/partials/modal.module.scss
+++ b/styles/partials/modal.module.scss
@@ -1,47 +1,3 @@
-.questionModal {
-    position: absolute;
-    top: -150px;
-    right: 0;
-    left: 0;
-    background-color: white;
-    color: #000;
-    padding: 15px;
-    border-radius: 15px;
-    box-shadow: 1px 1px 5px rgba($textPar, 0.5);
-    z-index: 6;
-    .button-wrapper {
-        display: flex;
-        .close {
-            position: absolute;
-            background-color: $light;
-            color: $primary;
-            margin-left: auto;
-            padding: 0;
-            right: -10px;
-            top: -25px;
-            svg {
-                width: 25px;
-                height: 25px;
-            }
-        }
-    }
-    .question-wrapper {
-        padding-top: 2px;
-        padding-bottom: 2px;
-        .question {
-            border: 2px solid $secondary;
-            border-radius: 5px;
-            p {
-                padding: 0 10px;
-            }
-        }
-        cursor: pointer;
-        &:hover {
-            color: rgba($textPar, 0.5);
-        }
-    }
-}
-
 .openModal {
     position: absolute;
     display: flex;
@@ -63,10 +19,64 @@
     box-shadow: 1px 1px 5px rgba($textPar, 0.5);
     bottom: -15px;
     padding: 10px 20px;
-
     .text {
         text-align: center;
         line-height: 1.1;
+    }
+    .button-wrapper {
+        display: flex;
+        position: absolute;
+        z-index: 7;
+        align-items: flex-start;
+        right: 0;
+        top: -175px;
+        .close {
+            position: absolute;
+            background-color: $light;
+            color: $primary;
+            margin-left: auto;
+            padding: 0;
+            right: -10px;
+            top: -0;
+            bottom: auto;
+            margin-bottom: auto;
+            width: 25px;
+            height: 25px;
+            align-self: flex-start;
+
+            svg {
+                width: 25px;
+                height: 25px;
+            }
+        }
+    }
+    .questionModal {
+        position: absolute;
+        top: -150px;
+        right: 0;
+        left: 0;
+        background-color: white;
+        color: #000;
+        padding: 15px;
+        border-radius: 15px;
+        box-shadow: 1px 1px 5px rgba($textPar, 0.5);
+        z-index: 6;
+
+        .question-wrapper {
+            padding-top: 2px;
+            padding-bottom: 2px;
+            .question {
+                border: 2px solid $secondary;
+                border-radius: 5px;
+                p {
+                    padding: 0 10px;
+                }
+            }
+            cursor: pointer;
+            &:hover {
+                color: rgba($textPar, 0.5);
+            }
+        }
     }
 }
 
