--- a/styles/partials/modal.module.scss
+++ b/styles/partials/modal.module.scss
@@ -32,7 +32,7 @@
         top: -175px;
         .close {
             position: absolute;
-            background-color: $light;
+            background-color: transparent;
             color: $primary;
             margin-left: auto;
             padding: 0;
