--- a/styles/partials/button.module.scss
+++ b/styles/partials/button.module.scss
@@ -11,6 +11,7 @@ button,
     padding: 5px 20px;
     color: $light;
     margin: 15px auto;
+    cursor: pointer;
 }
 
 @media (min-width: 992px) {
